minsoobot_v1.1 - 보안 강화 및 GPT-4o mini 적용

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>민수Bot - 인사 상담</title>
+    <title>Bot - 인사 상담</title>
     <link rel="stylesheet" href="legal-ui.css">
 </head>
 <body>
@@ -13,14 +13,14 @@
                 <div class="status-dot" id="statusDot"></div>
                 <span class="status-text" id="statusText">연결 확인 중...</span>
             </div>
-            <h1>민수Bot</h1>
+            <h1>Bot</h1>
             <p>인사/노무 상담 도우미</p>
         </div>
         
         <div class="chat-messages" id="chatMessages">
             <div class="message bot-message">
                 <div class="message-content">
-                    안녕하세요! 인사팀 민수Bot입니다.<br>
+                    안녕하세요! 인사팀 Bot입니다.<br>
                     근로기준법, 사내 규정, 직원 정보에 대해 궁금한 점이 있으시면 언제든지 물어보세요!
                 </div>
             </div>
@@ -30,17 +30,17 @@
         <div class="faq-section" id="faqSection">
             <h3>샘플 질문</h3>
             <div class="faq-grid">
-                <div class="faq-item" onclick="askQuestion('김민수님 연차 얼마나 남았어요?')">
-                    <span class="faq-text">연차 현황</span>
+                <div class="faq-item" onclick="askQuestion('넌 누구야?')">
+                    <span class="faq-text">넌 누구야?</span>
                 </div>
-                <div class="faq-item" onclick="askQuestion('김영희 차장 연락처 알려줘')">
+                <div class="faq-item" onclick="askQuestion('송현원 차장 연락처 알려줘')">
                     <span class="faq-text">직원 검색</span>
                 </div>
                 <div class="faq-item" onclick="askQuestion('근로기준법 제1조가 뭐야?')">
                     <span class="faq-text">법령 정보</span>
                 </div>
-                <div class="faq-item" onclick="askQuestion('4월 25일에 연차쓸게')">
-                    <span class="faq-text">연차 신청</span>
+                <div class="faq-item" onclick="askQuestion('최주율 차장 정보 알려줘')">
+                    <span class="faq-text">직원 정보</span>
                 </div>
             </div>
         </div>
