--- a/public/landing.html
+++ b/public/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>민수Bot - 인사/노무 상담 도우미</title>
+    <title>Bot - 인사/노무 상담 도우미</title>
     <link rel="stylesheet" href="legal-ui.css">
     <style>
         .landing-container {
@@ -105,7 +105,7 @@
     <div class="landing-container">
         <div class="landing-content">
             <div class="hero-section">
-                <h1>민수Bot</h1>
+                <h1>Bot</h1>
                 <h2>인사/노무 상담 도우미</h2>
                 <p class="hero-description">
                     근로기준법, 사내 규정, 직원 정보에 대한 문의를 AI가 도와드립니다.<br>
